# arc

./: .env.example  .gitignore  LICENSE  README.md  arc.toml  pyproject.toml  setup.sh
.arc/state/: disabled.json
arc/: __init__.py  _state.py  asgi.py  cli.py  codec.py  deploy.py  doctor.py  events.py  health.py  healthcmd.py  kernel.py  log.py  plugin_cli.py  registry.py  resolver.py  runtime.py  secrets.py  settings.py  sizing.py  surface.py
arc/kernel/: __init__.py  capability.py  cli.py  config.py  context.py  contracts.py  exceptions.py  installer.py  lifecycle.py  loader.py  logger.py  orchestrator.py  plugin.py  registry.py  resolver.py  runtime.py  state.py  watcher.py
arc/plugins/: __init__.py
arc/plugins/api/: __init__.py  cli.py  crud.py  custom.py  plugin.py  resource.py
arc/plugins/db/: __init__.py  backup.py  base.py  cli.py  config.py  engine.py  mixins.py  plugin.py  session.py
arc/plugins/http/: __init__.py  plugin.py
arc/plugins/psqldb/: __init__.py  backup.py  cli.py  config.py  engine.py  plugin.py
arc/tools/: __init__.py  migrate_v1.py
docs/: arcv2_arch.MD
hrms/schemas/: Employee.json
plugins/admin/: __init__.py  errors.py  guard.py  introspect.py  migrate.py  plugin.py  plugin.toml  schema_io.py
plugins/admin/routes/: __init__.py  migrate.py  queue.py  rows.py  schemas.py  users.py
plugins/admin/ui/: index.html
plugins/admin/ui-src/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
plugins/authn/: __init__.py  cli.py  config.py  errors.py  guards.py  plugin.py  plugin.toml  service.py
plugins/authn/hooks/: users.py
plugins/authn/routes/: auth.py
plugins/authn/schemas/: AuthRole.json  AuthSession.json  AuthUser.json
plugins/authn/security/: passwords.py  tokens.py
plugins/hrms/: __init__.py  plugin.py  plugin.toml
plugins/hrms/resources/: employee.json
plugins/hrms/routes/: employees.py
plugins/hrms/schemas/: Employee.json
plugins/http/: __init__.py  plugin.py  plugin.toml
plugins/psqldb/: __init__.py  backup.py  base.py  cli.py  engine.py  mixins.py  plugin.py  plugin.toml  session.py
plugins/psqldb/migrations/: ddl_linter.py  migrator.py  patch_compiler.py  schema.py  system.py
plugins/redix/: __init__.py  cli.py  config.py  connection.py  keys.py  plugin.py  plugin.toml  serializers.py
plugins/relay/: __init__.py  asgi.py  cli.py  discovery.py  documents.py  errors.py  filters.py  plugin.py  plugin.toml  redix_facade.py  registry.py  streaming.py
plugins/sales/: __init__.py  plugin.py  plugin.toml
(+34 files in other folders)
