[project]
name = "kernel"
version = "0.1.0"
description = "ARC — capability-based Python platform kernel"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "tomlkit>=0.13",
    "cryptography>=42.0",
    "rich>=13.7",
]

[project.scripts]
arc = "arc.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["arc"]
