[project]
name = "arc"
version = "0.1.0"
description = "ARC kernel - capability-based Python platform"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "tomlkit>=0.12",
    "cryptography>=42.0",
    "rich>=13.0",
    "msgspec>=0.18",
]
 
[project.scripts]
arc = "arc.cli:app"
 
# NEW: dev-only tooling for the kernel's own test suite (`uv run pytest`).
[dependency-groups]
dev = ["pytest>=8.0"]
 
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
 
[tool.hatch.build.targets.wheel]
packages = ["arc"]