[project]
# Distribution name on PyPI — "arc" itself is already taken by an unrelated
# package. The importable package stays `arc` regardless (see
# [tool.hatch.build.targets.wheel] below): `pip install arc-kernel` still
# gives you `import arc` and the `arc` command.
name = "arc-kernel"
version = "0.1.0"
description = "ARC kernel — capability-based Python platform"
readme = "README.md"
license = "MIT"
authors = [{ name = "Vignesh Ramsh" }]
requires-python = ">=3.12"
keywords = ["arc", "kernel", "capability", "framework", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "typer>=0.12",
    "tomlkit>=0.12",
    "cryptography>=42.0",
    "rich>=13.0",
    "msgspec>=0.18",
]

[project.urls]
Homepage = "https://github.com/vignesh-ramsh/arc"
Repository = "https://github.com/vignesh-ramsh/arc"

[project.scripts]
arc = "arc.cli:app"

# NEW: dev-only tooling for the kernel's own test suite (`uv run pytest`).
[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["arc"]